--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dimforge/rapier3d-compat": "^0.11.2",
     "@react-three/drei": "^9.61.1",
     "@react-three/fiber": "^8.12.0",
     "@react-three/rapier": "^0.14.0",
